--- a/src/app/features/login/login-form/login-form.component.html
+++ b/src/app/features/login/login-form/login-form.component.html
@@ -15,4 +15,4 @@
   </div>
   <button type="submit" class="btn btn-primary w-100 text-white">Đăng nhập</button>
 </form>
-
+<p-toast  key="center" position="top-right"></p-toast>
