--- a/src/app/features/post-login/school-list/school-detail/school-detail.component.html
+++ b/src/app/features/post-login/school-list/school-detail/school-detail.component.html
@@ -33,26 +33,72 @@
       </div>
     </div>
 
+    <div class="m-3">
+      <button class="btn btn-primary" (click)="onUpdate()">Cập nhật</button>
+
+    </div>
 
 
   </div>
-  <div class="col-md-6" *ngIf="principal">
+  <div class="col-md-6">
     <div class="m-3">
       <h5>Thông tin hiệu trưởng</h5>
     </div>
-    <div class="mb-4">
-      <div class="m-3">
-        <p class="text-black-50">Email</p>
+    <ng-container *ngIf="!principal">
+      <div class="mb-4">
+        <div class="m-3">
+          <p class="text-black-50">Email</p>
+        </div>
+        <div class="m-3">
+          <p class="font-weight-bold">Chưa có hiệu trưởng</p>
+        </div>
       </div>
-      <div class="m-3">
-        <p class="font-weight-bold">{{principal.email}}</p>
+    </ng-container>
+    <ng-container *ngIf="principal">
+      <div class="mb-4">
+        <div class="m-3">
+          <p class="text-black-50">Email</p>
+        </div>
+        <div class="m-3">
+          <p class="font-weight-bold">{{principal.email}}</p>
+        </div>
       </div>
-    </div>
+      <div class="mb-4">
+        <div class="m-3">
+          <p class="text-black-50">Tên</p>
+        </div>
+        <div class="m-3">
+          <p class="font-weight-bold">{{principal.user?.fullName}}</p>
+        </div>
+      </div>
+      <div class="mb-4">
+        <div class="m-3">
+          <p class="text-black-50">Giới tính</p>
+        </div>
+        <div class="m-3">
+          <p class="font-weight-bold">{{principal.user?.gender == "MALE" ? "Nam" : "Nữ" }}</p>
+        </div>
+      </div>
+      <div class="mb-4">
+        <div class="m-3">
+          <p class="text-black-50">Ngày sinh</p>
+        </div>
+        <div class="m-3">
+          <p class="font-weight-bold">{{principal.user?.dob == null ? "Chưa nhập ngày sinh" : principal.user?.dob }}</p>
+        </div>
+      </div>
+      <div class="mb-4">
+        <div class="m-3">
+          <p class="text-black-50">Số điện thoại</p>
+        </div>
+        <div class="m-3">
+          <p class="font-weight-bold">{{principal.user?.phoneNumber == null ? "Chưa nhập số điện thoại" : principal.user?.phoneNumber }}</p>
+        </div>
+      </div>
+    </ng-container>
+
 
   </div>
 </div>
 
-<div class="m-3">
-  <button class="btn btn-primary" (click)="onUpdate()">Cập nhật</button>
 
-</div>
