--- a/src/app/features/post-login/school-list/school-update/school-update.component.html
+++ b/src/app/features/post-login/school-list/school-update/school-update.component.html
@@ -1,4 +1,5 @@
 <h2>Cập nhật trường</h2>
+
 <form [formGroup]="updateForm"
       class="row"
       (ngSubmit)="onSubmit()"
@@ -15,7 +16,7 @@
                         type="text"
                         formControlName='schoolName'
                 >
-                                <span *ngIf="isBlank('schoolName')" class="p-error">Không được để trống mục này</span>
+                                <span *ngIf="check('schoolName','whitespace')" class="p-error">Không được để trống mục này</span>
                                 <span *ngIf="updateForm.get('schoolName')?.hasError('notUnique')" class="p-error">Tên trường này đã tồn tại</span>
 
             </div>
@@ -32,7 +33,7 @@
                         type="text"
                         formControlName='address'
                 >
-                                <span *ngIf="isBlank('address')" class="p-error">Không được để trống mục này</span>
+                                <span *ngIf="check('address','whitespace')" class="p-error">Không được để trống mục này</span>
 
             </div>
 
@@ -56,33 +57,203 @@
         <button class="m-3 btn btn-primary" (click)="onBack()" >Quay lại</button>
 
     </div>
-    <div class="col-md-6" *ngIf="principal">
-        <div class="m-3">
-            <h5>Thông tin hiệu trưởng</h5>
+  <div class="col-md-6">
+    <div class="m-3">
+      <div class="d-flex justify-content-start">
+        <h5>Thông tin hiệu trưởng</h5>
+
+        <i
+          (click)="onClickNotUpdatePrincipalEmail()"
+          [ngClass]="isUpdatePrincipalEmail ?'icon bi bi-x' : 'icon bi bi-pencil-fill' "></i>
+      </div>
+    </div>
+
+
+    <ng-container *ngIf="!isUpdatePrincipalEmail">
+      <ng-container *ngIf="!principal">
+        <div class="mb-4">
+          <div class="m-3">
+            <p class="text-black-50">Email</p>
+          </div>
+          <div class="m-3">
+            <p class="font-weight-bold">Chưa có hiệu trưởng</p>
+          </div>
+        </div>
+
+      </ng-container>
+      <ng-container *ngIf="principal">
+        <div class="mb-4">
+          <div class="m-3">
+            <p class="text-black-50">Email</p>
+          </div>
+          <div class="m-3">
+            <p class="font-weight-bold">{{principal.email}}</p>
+          </div>
         </div>
         <div class="mb-4">
-            <div class="m-3">
-                <p class="text-black-50">Email</p>
-            </div>
-            <div class="m-3 d-flex justify-content-between ">
-                <p *ngIf="!isUpdatePrincipalEmail" class="font-weight-bold">{{principal.email}}</p>
-                <input *ngIf="isUpdatePrincipalEmail"
-                       formControlName='principalEmail'
-                       class="form-control">
-                <div class="d-flex justify-content-center">
-
-                    <i
-                       (click)="onClickNotUpdatePrincipalEmail()"
-                       [ngClass]="isUpdatePrincipalEmail ?'icon bi bi-x' : 'icon bi bi-pencil-fill' "></i>
-                </div>
-                <span *ngIf="isBlank('principalEmail')" class="p-error">Không được để trống mục này</span>
-                <span *ngIf="updateForm.get('principalEmail')?.hasError('notUnique')" class="p-error">Tên email này đã tồn tại</span>
-                <span class="p-error"
-                      *ngIf="updateForm.get('principalEmail')?.hasError('email')">Sai định dạng gmail</span>
-            </div>
+          <div class="m-3">
+            <p class="text-black-50">Tên</p>
+          </div>
+          <div class="m-3">
+            <p class="font-weight-bold">{{principal.user?.fullName}}</p>
+          </div>
+        </div>
+        <div class="mb-4">
+          <div class="m-3">
+            <p class="text-black-50">Giới tính</p>
+          </div>
+          <div class="m-3">
+            <p class="font-weight-bold">{{principal.user?.gender == "MALE" ? "Nam" : "Nữ" }}</p>
+          </div>
+        </div>
+        <div class="mb-4">
+          <div class="m-3">
+            <p class="text-black-50">Ngày sinh</p>
+          </div>
+          <div class="m-3">
+            <p class="font-weight-bold">{{principal.user?.dob == null ? "Chưa nhập ngày sinh" : principal.user?.dob }}</p>
+          </div>
+        </div>
+        <div class="mb-4">
+          <div class="m-3">
+            <p class="text-black-50">Số điện thoại</p>
+          </div>
+          <div class="m-3">
+            <p class="font-weight-bold">{{principal.user?.phoneNumber == null ? "Chưa nhập số điện thoại" : principal.user?.phoneNumber  }}</p>
+          </div>
+        </div>
+      </ng-container>
+    </ng-container>
+    <ng-container *ngIf="isUpdatePrincipalEmail">
+        <div class="col-md-10">
+          <div class="m-3">
+            <label><span class="p-error">*</span>Email <span class="p-error">(bắt buộc)</span></label>
+          </div>
+          <div class="m-3">
+            <input
+              class="form-control"
+              type="text"
+              formControlName='principalEmail'
+              placeholder="(VD): nguyenvan-a@mamnon.edu.vn"
+            >
+            <span class="p-error"
+                  *ngIf="isBlank('principalEmail')">Không được để trống mục này</span>
+            <span class="p-error"
+                  *ngIf="updateForm.get('principalEmail')?.hasError('email')">Sai định dạng gmail</span>
+            <span class="p-error"
+                  *ngIf="updateForm.get('principalEmail')?.hasError('notUnique')">
+      Email này đã tồn tại vui lòng chọn email khác
+    </span>
+          </div>
         </div>
 
-    </div>
+        <div class="col-md-10">
+          <div class="m-3">
+            <label><span class="p-error">*</span>Tên <span class="p-error">(bắt buộc)</span></label>
+          </div>
+          <div class="m-3">
+            <input
+              class="form-control"
+              type="text"
+              formControlName='fullName'
+              placeholder="(VD): Nguyen Van A"
+            >
+            <span class="p-error"
+                  *ngIf="check('fullName', 'whitespace')">
+            Không được để trống mục này</span>
+
+
+          </div>
+        </div>
+
+        <div class="col-md-10">
+          <div class="m-3">
+            <label>Giới tính</label>
+          </div>
+          <div class="m-3">
+            <p-dropdown [options]="genders" formControlName = "gender">
+            </p-dropdown>
+          </div>
+        </div>
+
+        <div class="col-md-10">
+          <div class="m-3">
+            <label>Ngày sinh</label>
+          </div>
+          <div class="m-3">
+            <input
+              class="form-control"
+              type="date"
+              formControlName='dob'
+            >
+            <span class="p-error"
+                  *ngIf="check('dob', 'invalidDate')">
+      Ngày sinh không thể là tương lai
+    </span>
+          </div>
+        </div>
+
+        <div class="col-md-10">
+          <div class="m-3">
+            <label>Số điện thoại</label>
+          </div>
+          <div class="m-3">
+            <input
+              class="form-control"
+              type="text"
+              formControlName='phoneNumber'
+              placeholder="(VD): 0123456789"
+            >
+            <span class="p-error"
+                  *ngIf="check('phoneNumber', 'pattern')">
+      Sai định dạng số điện thoại
+    </span>
+          </div>
+        </div>
+    </ng-container>
+
+
+  </div>
+
+<!--    <div class="col-md-6" >-->
+<!--      <div class="col-md-10">-->
+<!--        <div class="m-3">-->
+<!--          <h5>Thông tin hiệu trưởng</h5>-->
+<!--        </div>-->
+
+<!--        <div class="mb-4">-->
+<!--          <div class="m-3">-->
+<!--            <p class="text-black-50">Email</p>-->
+<!--          </div>-->
+<!--          <div class="m-3 d-flex justify-content-between ">-->
+<!--            <p *ngIf="!isUpdatePrincipalEmail  " class="font-weight-bold">-->
+<!--              {{principal != null ? principal.email : "Chưa có hiệu trưởng"}}-->
+
+<!--            </p>-->
+<!--            <div>-->
+<!--              <input *ngIf="isUpdatePrincipalEmail"-->
+<!--                     formControlName='principalEmail'-->
+<!--                     class="form-control">-->
+<!--            </div>-->
+<!--          </div>-->
+
+<!--          <div class="m-3">-->
+<!--            <span *ngIf="isBlank('principalEmail') && this.isUpdatePrincipalEmail" class="p-error">Không được để trống mục này</span>-->
+<!--            <span *ngIf="updateForm.get('principalEmail')?.hasError('notUnique')" class="p-error">Tên email này đã tồn tại</span>-->
+<!--            <span class="p-error"-->
+<!--                  *ngIf="updateForm.get('principalEmail')?.hasError('email')">Sai định dạng gmail</span>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="col-md-10">-->
+<!--        <div class="m-3">-->
+<!--          <label>Trạng thái</label>-->
+<!--        </div>-->
+<!--      </div>-->
+
+
+
+<!--    </div>-->
 
 </form>
 <p-toast position="top-right" key="error"></p-toast>
