--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -1,58 +1,79 @@
-<p-dialog
-  header="Chi tiết công việc"
-  [(visible)]="detailVisible"
-  [style]="{ width: '70vw', height: '1080px' }"
-  [draggable]="false"
-  [resizable]="false"
-  (onHide)="assignmentPopuptHideEvent()"
->
-  <div *ngIf="selectedAssignment" class="row assignment-container">
-    <div class="col-md-8 left-box">
-      <div class="height-100">
-        <span class="text-black-50">Tên công việc</span>
-        <br />
-        <span class="font-weight-bold mt-1">{{
-          selectedAssignment.assignmentName
-        }}</span>
-      </div>
-      <div class="height-100">
-        <span class="text-black-50">Chi tiết công việc</span>
-        <br />
-        <span class="font-weight-bold mt-1">{{
-          selectedAssignment.description
-        }}</span>
-      </div>
-      <!-- file -->
-      <div>
-        <div class="d-flex justify-content-between">
-          <div>
-            <span class="text-black-50">Tài liệu</span>
-          </div>
+<!-- confirm and message -->
+<p-toast></p-toast>
+<p-confirmDialog
+  [style]="{ width: '50vw' }"
+  acceptLabel="Đồng ý"
+  rejectLabel="Hủy"
+></p-confirmDialog>
+<form [formGroup]="assignmentForm">
+  <!-- Popup detail/update -->
+  <p-dialog
+    header="Chi tiết công việc"
+    [(visible)]="detailVisible"
+    [style]="{ width: '70vw', height: '1080px' }"
+    [draggable]="false"
+    [resizable]="false"
+    (onHide)="assignmentPopuptHideEvent()"
+  >
+    <div *ngIf="selectedAssignment" class="row assignment-container">
+      <div class="col-md-8 left-box">
+        <div class="height-100">
+          <span class="text-black-50">Tên công việc</span>
+          <br />
+          <span *ngIf="action === 'info'" class="font-weight-bold mt-1">{{
+            selectedAssignment.assignmentName
+          }}</span>
+          <input
+            *ngIf="action === 'update'"
+            pInputText
+            type="text"
+            formControlName="assignmentName"
+          />
         </div>
-        <br />
-        <div *ngIf="documents.length > 0">
-          <ng-container *ngFor="let item of documents; let i = index">
-            <div class="row mb-3">
-              <div (click)="openNewTab(item.documentLink)">
-                <div class="file-item px-3 py-1 d-flex">
-                  <div
-                    class="file-item-icon ml-5 d-flex justify-content-center align-items-center"
-                  >
-                    <img src="../../../../../assets/img/pdf.png" alt="" />
-                  </div>
-                  <div class="file-item-content">
-                    <div class="row ms-2">
-                      <div class="col-md-10">
-                        <span class="font-weight-bold font-size-18">{{
-                          item.documentName
-                        }}</span>
-                        <br />
-                        <span
-                          ><span class="font-weight-bold">Mã:</span>
-                          {{ item.documentCode }}</span
-                        >
-                      </div>
-                      <!-- <div class="col-md-2">
+        <div class="height-100">
+          <span class="text-black-50">Chi tiết công việc</span>
+          <br />
+          <span *ngIf="action === 'info'" class="font-weight-bold mt-1">{{
+            selectedAssignment.description
+          }}</span>
+          <textarea
+            *ngIf="action === 'update'"
+            class="mb-1"
+            pInputTextarea
+            formControlName="description"
+          ></textarea>
+        </div>
+        <!-- file -->
+        <div class="mt-2" *ngIf="selectedAssignment.task">
+          <div class="d-flex justify-content-between">
+            <div>
+              <span class="text-black-50">Tài liệu</span>
+            </div>
+          </div>
+          <br />
+          <div *ngIf="documents.length > 0">
+            <ng-container *ngFor="let item of documents; let i = index">
+              <div class="row mb-3">
+                <div (click)="openNewTab(item.documentLink)">
+                  <div class="file-item px-3 py-1 d-flex">
+                    <div
+                      class="file-item-icon ml-5 d-flex justify-content-center align-items-center"
+                    >
+                      <img src="../../../../../assets/img/pdf.png" alt="" />
+                    </div>
+                    <div class="file-item-content">
+                      <div class="row ms-2">
+                        <div class="col-md-10">
+                          <span class="font-weight-bold font-size-18">{{
+                            item.documentName
+                          }}</span>
+                          <br />
+                          <span
+                            ><span class="font-weight-bold">Mã:</span>
+                            {{ item.documentCode }}</span
+                          >
+                        </div>
+                        <!-- <div class="col-md-2">
                         <span class="text-black-50">{{
                           item.sizeFormat || item.file.size
                         }}</span>
@@ -61,146 +82,197 @@
                           item.uploadedDate | date : "MM/dd/yyyy"
                         }}</span>
                       </div> -->
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </ng-container>
+            </ng-container>
+          </div>
         </div>
-      </div>
-      <!-- comment -->
-      <div class="height-100">
-        <br />
-        <form [formGroup]="commentForm">
-          <div class="comment d-flex">
-            <input
-              formControlName="content"
-              pInputText
-              type="text"
-              placeholder="Gửi bình luận"
-              (keydown)="onKeyPress($event)"
-            />
+        <div class="mt-2" *ngIf="!selectedAssignment.task">
+          <span class="text-black-50"> Danh sách thư mục/công việc con </span>
+          <ul *ngFor="let item of selectedAssignment.children">
+            <ng-container *ngIf="item.task">
+              <i class="bi bi-file-earmark-check-fill file-icon"></i>
+            </ng-container>
+            <ng-container *ngIf="!item.task">
+              <i class="bi bi-folder-fill folder-icon"></i>
+            </ng-container>
+            {{
+              item.assignmentName
+            }}
+          </ul>
+        </div>
+        <!-- comment -->
+        <div class="height-100">
+          <br />
+          <form [formGroup]="commentForm">
+            <div class="comment d-flex">
+              <input
+                formControlName="content"
+                pInputText
+                type="text"
+                placeholder="Gửi bình luận"
+                (keydown)="onKeyPress($event)"
+              />
+              <div
+                class="d-flex justify-content-center align-items-center p-2"
+                (click)="sendComment()"
+              >
+                <i class="bi bi-send"></i>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div *ngIf="selectedAssignment.comments" class="comment-content pt-2">
+          <div
+            *ngFor="let item of selectedAssignment.comments"
+            class="comment-item row"
+          >
             <div
-              class="d-flex justify-content-center align-items-center p-2"
-              (click)="sendComment()"
+              class="comment-item-person col-md-1 d-flex justify-content-center align-items-center"
             >
-              <i class="bi bi-send"></i>
+              <img src="../../../../../../assets/img/user_icon.svg" alt="" />
+            </div>
+            <div class="comment-item-content col-md-10">
+              <span class="font-weight-bold font-size-18"
+                >{{ item.userName }}
+              </span>
+              <span class="text-black-50 comment-date">{{
+                item.createdDate | date : "dd/MM/yyyy"
+              }}</span>
+
+              <br />
+              <span>{{ item.content }}</span>
+            </div>
+            <div
+              class="col-md-1 d-flex justify-content-center align-items-center"
+            >
+              <i class="bi bi-three-dots-vertical"></i>
             </div>
           </div>
-        </form>
-      </div>
-      <div *ngIf="selectedAssignment.comments" class="comment-content pt-2">
-        <div
-          *ngFor="let item of selectedAssignment.comments"
-          class="comment-item row"
-        >
-          <div
-            class="comment-item-person col-md-1 d-flex justify-content-center align-items-center"
-          >
-            <img src="../../../../../../assets/img/user_icon.svg" alt="" />
-          </div>
-          <div class="comment-item-content col-md-10">
-            <span class="font-weight-bold font-size-18"
-              >{{ item.userName }}
-            </span>
-            <span class="text-black-50 comment-date">{{
-              item.createdDate | date : "dd/MM/yyyy"
-            }}</span>
-
-            <br />
-            <span>{{ item.content }}</span>
-          </div>
-          <div
-            class="col-md-1 d-flex justify-content-center align-items-center"
-          >
-            <i class="bi bi-three-dots-vertical"></i>
-          </div>
         </div>
       </div>
-    </div>
-    <div class="col-md-4 right-box">
-      <div class="height-100">
-        <span class="text-black-50">Người giao</span>
-        <br />
-        <div class="row mt-1">
-          <div
-            class="comment-item-person col-md-2 d-flex justify-content-center align-items-center"
-          >
-            <img src="../../../../../../assets/img/user_icon.svg" alt="" />
-          </div>
-          <div class="col-md-10 d-flex align-items-center">
-            <span class="font-weight-bold">{{
-              selectedAssignment.assigner?.user.fullName
-            }}</span>
-          </div>
-        </div>
-      </div>
-      <div class="height-100">
-        <span class="text-black-50">Người làm</span>
-        <br />
-        <div class="row mt-1">
-          <div
-            class="comment-item-person col-md-2 d-flex justify-content-center align-items-center"
-          >
-            <img src="../../../../../../assets/img/user_icon.svg" alt="" />
-          </div>
-          <div class="col-md-10 d-flex align-items-center">
-            <span class="font-weight-bold">{{
-              selectedAssignment.assignee?.user.fullName
-            }}</span>
-          </div>
-        </div>
-      </div>
-      <div class="height-100">
-        <span class="text-black-50">Hạn nộp</span>
-        <br />
-        <span class="font-weight-bold mt-1">{{
-          selectedAssignment.deadline | date : "dd/MM/yyyy"
-        }}</span>
-      </div>
-      <div class="height-100">
-        <span class="text-black-50">Trạng thái</span>
-        <br />
-        <!-- <form [formGroup]="statusForm"> -->
-        <p-dropdown dataKey="value" [options]="statusOptions" #dropdown>
-          <ng-template let-option pTemplate="selectedItem">
-            <p-tag class="status" [severity]="option.severity" [rounded]="true">
-              {{ option.label }}
-            </p-tag>
-          </ng-template>
-          <ng-template let-option pTemplate="item">
-            <p-tag
-              class="status"
-              [severity]="option.severity"
-              [rounded]="true"
-              [ngClass]="{ 'disabled-option': option.disabled }"
+      <div class="col-md-4 right-box">
+        <div class="height-100">
+          <span class="text-black-50">Người giao</span>
+          <br />
+          <div class="row mt-1">
+            <div
+              class="comment-item-person col-md-2 d-flex justify-content-center align-items-center"
             >
-              {{ option.label }}
+              <img src="../../../../../../assets/img/user_icon.svg" alt="" />
+            </div>
+            <div class="col-md-10 d-flex align-items-center">
+              <span class="font-weight-bold">{{
+                selectedAssignment.assigner?.user.fullName
+              }}</span>
+            </div>
+          </div>
+        </div>
+        <div class="height-100">
+          <span class="text-black-50">Người làm</span>
+          <br />
+          <div class="row mt-1">
+            <div
+              class="comment-item-person col-md-2 d-flex justify-content-center align-items-center"
+            >
+              <img src="../../../../../../assets/img/user_icon.svg" alt="" />
+            </div>
+            <div class="col-md-10 d-flex align-items-center">
+              <span class="font-weight-bold">{{
+                selectedAssignment.assignee?.user.fullName
+              }}</span>
+            </div>
+          </div>
+        </div>
+        <div class="height-100">
+          <span class="text-black-50">Hạn nộp</span>
+          <br />
+          <span class="font-weight-bold mt-1">{{
+            selectedAssignment.deadline | date : "dd/MM/yyyy"
+          }}</span>
+        </div>
+        <div class="height-100">
+          <span class="text-black-50">Trạng thái</span>
+          <br />
+          <ng-container
+            *ngIf="selectedAssignment.task && hasAuthority('canEvaluate')"
+          >
+            <p-dropdown dataKey="value" [options]="statusOptions" #dropdown>
+              <ng-template let-option pTemplate="selectedItem">
+                <p-tag
+                  class="status"
+                  [severity]="option.severity"
+                  [rounded]="true"
+                >
+                  {{ option.label }}
+                </p-tag>
+              </ng-template>
+              <ng-template let-option pTemplate="item">
+                <p-tag
+                  class="status"
+                  [severity]="option.severity"
+                  [rounded]="true"
+                  [ngClass]="{ 'disabled-option': option.disabled }"
+                >
+                  {{ option.label }}
+                </p-tag>
+              </ng-template>
+            </p-dropdown>
+          </ng-container>
+          <ng-container
+            *ngIf="
+              !selectedAssignment.task ||
+              (selectedAssignment.task && !hasAuthority('canEvaluate'))
+            "
+          >
+            <p-tag
+              [rounded]="true"
+              [severity]="getStatusSeverity(selectedAssignment.status.statusId)"
+            >
+              {{ selectedAssignment.status.statusName }}
             </p-tag>
-          </ng-template>
-        </p-dropdown>
-        <!-- </form> -->
-      </div>
-      <div class="height-100">
-        <span class="text-black-50">Ngày tạo</span>
-        <br />
-        <span class="font-weight-bold mt-1">{{
-          selectedAssignment.createdDate | date : "dd/MM/yyyy"
-        }}</span>
+          </ng-container>
+
+          <!-- </form> -->
+        </div>
+        <div class="height-100">
+          <span class="text-black-50">Ngày tạo</span>
+          <br />
+          <span class="font-weight-bold mt-1">{{
+            selectedAssignment.createdDate | date : "dd/MM/yyyy"
+          }}</span>
+        </div>
+        <div
+          *ngIf="action === 'info' && hasAuthority('canCompleteConfirm')"
+          class="height-100"
+        >
+          <span class="font-weight-bold">Xác nhận hoàn thành</span>
+          <br />
+          <button pButton>Xác nhận</button>
+        </div>
+        <div
+          *ngIf="action === 'info' && hasAuthority('canCancelConfirm')"
+          class="height-100"
+        >
+          <span class="font-weight-bold">Hủy xác nhận hoàn thành</span>
+          <br />
+          <button pButton>Hủy</button>
+        </div>
       </div>
     </div>
-  </div>
-</p-dialog>
-<p-dialog
-  header="Chi tiết công việc"
-  [(visible)]="assignmentVisible"
-  [style]="{ width: '70vw', height: '1080px' }"
-  [draggable]="false"
-  [resizable]="false"
-  (onHide)="assignmentPopuptHideEvent()"
->
-  <form [formGroup]="assignmentForm">
+  </p-dialog>
+  <!-- Popup addroot/addchild -->
+  <p-dialog
+    header="Thêm mới công việc"
+    [(visible)]="assignmentVisible"
+    [style]="{ width: '70vw', height: '1080px' }"
+    [draggable]="false"
+    [resizable]="false"
+    (onHide)="assignmentPopuptHideEvent()"
+  >
     <div *ngIf="selectedAssignment && action == 'addchild'" class="mb-2">
       <span class="mb-1 font-weight-bold">Thuộc</span>
       <br />
@@ -267,8 +339,9 @@
     >
       Thêm mới
     </button>
-  </form>
-</p-dialog>
+  </p-dialog>
+</form>
+<!-- Popup file preview -->
 <p-dialog
   [(visible)]="pdfLoaded"
   [style]="{ width: '90vw', height: '1080px' }"
@@ -279,12 +352,7 @@
     <iframe [src]="safePdfUrl" width="100%" height="650px"></iframe>
   </div>
 </p-dialog>
-<p-toast></p-toast>
-<p-confirmDialog
-  [style]="{ width: '50vw' }"
-  acceptLabel="Đồng ý"
-  rejectLabel="Hủy"
-></p-confirmDialog>
+
 <h4>Phân chia công việc</h4>
 <p-treeTable
   [value]="assignments"
@@ -327,27 +395,36 @@
       <td class="d-flex">
         <div
           class="action-item d-flex justify-content-center align-items-center mx-2"
-          (click)="openDetailRowNode(rowData.node)"
+          (click)="openDetailRowNode(rowData.node, 'info')"
         >
           <i class="bi bi-info-circle-fill"></i>
         </div>
         <div
+          *ngIf="hasAuthorityByRowNode('canCreateFolderAsm', rowData.node)"
           class="action-item d-flex justify-content-center align-items-center mx-2"
           (click)="openDetail(rowData.node, 'addchild')"
         >
           <i class="bi bi-plus-circle-fill"></i>
         </div>
+
         <div
+          *ngIf="
+            hasAuthorityByRowNode('canModifyFolderAsmMetaData', rowData.node) ||
+            hasAuthorityByRowNode('canChangeAssignee', rowData.node)
+          "
           class="action-item d-flex justify-content-center align-items-center mx-2"
-          (click)="openDetail(rowData.node, 'update')"
-          *ngIf="rowData.node.assigner?.email === user"
+          (click)="openDetailRowNode(rowData.node, 'update')"
         >
           <i class="bi bi-pencil-fill"></i>
         </div>
+
         <div
+          *ngIf="
+            hasAuthorityByRowNode('canDeleteFolder', rowData.node) ||
+            hasAuthorityByRowNode('canDeleteAsm', rowData.node)
+          "
           class="action-item d-flex justify-content-center align-items-center mx-2"
           (click)="deleteNode(rowData.node)"
-          *ngIf="rowData.node.assigner?.email === user"
         >
           <i class="bi bi-x-circle-fill"></i>
         </div>
