add forgot password

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -91,7 +91,7 @@
           <a class="" [routerLink]="['/guidanceDocument']">
             <div>
               <i class="bi bi-clipboard2-check"></i>
-              &nbsp; Văn bản chỉ đạo
+              &nbsp; Văn bản bổ sung
               </div>
           </a>
           </li>
