--- a/src/app/features/login/forgot-password/forgot-password.component.html
+++ b/src/app/features/login/forgot-password/forgot-password.component.html
@@ -1,10 +1,59 @@
 <p class="fw-bold fs-2 mt-5">QUÊN MẬT KHẨU</p>
-<p class="fw-bold">Sử dụng email để lấy lại mật khẩu</p>
-<form  class="forgot-password-form">
-  <div>
-    <label for="exampleInputEmail1" class="form-label fw-bold">Email</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-           placeholder="Nhập email đã đăng ký">
+<ng-container *ngIf="!isConfirm">
+  <p class="fw-bold">Sử dụng email để lấy lại mật khẩu</p>
+  <form  class="forgot-password-form" [formGroup]="form">
+    <div>
+      <label for="exampleInputEmail1" class="form-label fw-bold">Email</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+             placeholder="Nhập email đã đăng ký"
+             formControlName = 'email'
+      >
+    </div>
+    <button
+      type="submit"
+      class="btn w-100 text-white"
+      data-toggle="modal"
+      data-target="#exampleModal"
+      (click)="onSubmit()"
+    >Gửi Email</button>
+    <span class="p-error" *ngIf="isBlank('email')">Không được để trống mục này</span>
+    <span class="p-error" *ngIf="isError('email','email', this.form)">Sai định dạng email</span>
+  </form>
+</ng-container>
+
+<ng-container *ngIf="isConfirm">
+  <p class="fw-bold">Sử dụng mã xác nhận đã được gửi tới email của bạn</p>
+  <form  class="forgot-password-form" [formGroup]="confirmForm">
+    <div>
+      <label for="exampleInputEmail1" class="form-label fw-bold">Mã xác nhận</label>
+      <input type="email" class="form-control"  aria-describedby="emailHelp"
+             placeholder="Nhập mã xác nhận"
+             formControlName = 'code'
+      >
+      <span class="p-error" *ngIf="isError('code', 'whitespace', this.confirmForm)">Không được để trống mục này</span>
+
+    </div>
+    <button
+      type="submit"
+      class="btn w-100 text-white"
+      data-toggle="modal"
+      data-target="#exampleModal"
+      (click)="onSubmitConfirm()"
+    >Gửi mã xác nhận</button>
+    <button   class="btn w-100 text-white"
+              data-toggle="modal"
+              data-target="#exampleModal"
+              (click)="toLogin()"
+    >Quay về đăng nhập</button>
+  </form>
+
+</ng-container>
+
+
+
+<p-toast position="top-right" key="error"></p-toast>
+<div class="overlay" *ngIf="isLoading">
+  <div class="spinner-container">
+    <div class="spinner-border" role="status"></div>
   </div>
-  <button type="submit" class="btn w-100 text-white" data-toggle="modal" data-target="#exampleModal">Gửi Email</button>
-</form>
+</div>
