--- a/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css">
 
-<h2>Tra cứu văn bản chỉ đạo</h2>
+<h2>Tra cứu văn bản bổ sung</h2>
 
 <div class="row mt-4">
   <div class="form-group col-md-7" *ngIf="!advanceSearch">
