--- a/src/app/features/login/forgot-password/forgot-password.component.scss
+++ b/src/app/features/login/forgot-password/forgot-password.component.scss
@@ -29,3 +29,22 @@ $base: #C8C8D0;
     background-color: $primary;
   }
 }
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Add transparency to the overlay */
+  z-index: 9999; /* Set a high z-index to ensure it's on top of other elements */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
