Inspection plan create fix bugs

--- a/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -6,7 +6,7 @@
     <div class="list-inspector-header px-3 text-center">
       <h5 class="mx-auto mt-2">Danh sách thanh tra</h5>
       <div class="total">
-        <span class="mx-auto">Tổng số:</span>
+        <span class="mx-auto">Tổng số: {{selectedInspectors?.length || 0}}</span>
       </div>
     </div>
 
