--- a/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-popup/inspection-plan-inspector-popup.component.html
+++ b/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-popup/inspection-plan-inspector-popup.component.html
@@ -91,11 +91,8 @@
       </tr>
     </ng-template>
   </p-table>
-  <button
-    pButton
-    (click)="addInspector()"
-    [disabled]="!selectedInspectors || !selectedInspectors.length"
-  >
-    Lưu
-  </button>
+  <div class="d-flex flex-row justify-content-between align-items-end">
+    <button pButton (click)="addInspector()" class="px-3">Lưu đoàn kiểm tra</button>
+    <div *ngIf="errorText" class="p-error">{{ errorText }}</div>
+  </div>
 </p-dialog>
