--- a/src/app/components/notification-list/notification-list.component.html
+++ b/src/app/components/notification-list/notification-list.component.html
@@ -1,4 +1,4 @@
-<div ngbDropdown class="d-inline-block notification">
+<div ngbDropdown class="d-inline-block notification" placement="bottom-right">
   <button type="button" id="dropdownBasic1" ngbDropdownToggle>
     <i class="bi bi-bell" pBadge [value]="badgeValue" severity="danger"></i>
   </button>
