--- a/src/app/features/post-login/inspection-plan-list/create-inspection-plan/create-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan-list/create-inspection-plan/create-inspection-plan.component.html
@@ -1,16 +1,22 @@
 <div class="container-fluid">
   <div class="row create-inspection-plan">
-    <h4 class="mb-3">Tạo mới quyết định kiểm tra</h4>
+    <h4 class="mb-3 fw-bold">Tạo mới quyết định kiểm tra</h4>
     <app-inspection-plan-inspector-popup
       (popupInspectorVisibleChange)="changeInspectorVisible()"
       [popupInspectorVisible]="popupInspectorVisible"
       [inspectorList]="inspectorList"
       (selectedInspectorsList)="getInspectorIds($event)"
+      [chiefList]="chiefList"
     ></app-inspection-plan-inspector-popup>
+    <p-confirmDialog
+      [style]="{width: '50vw'}"
+      acceptLabel="Xác nhận"
+      rejectLabel="Hủy bỏ"
+    ></p-confirmDialog>
     <form class="row" [formGroup]="inspectionPlanForm" (ngSubmit)="onSubmit()">
       <div class="form-content col-md-8 mb-2">
         <div class="inspection-plan-name mb-3">
-          <label class="fw-medium">Tên quyết định kiểm tra</label>
+          <label class="fw-medium">Tên quyết định kiểm tra<span class="p-error">*</span></label>
           <input
             type="text"
             pInputText
@@ -30,7 +36,7 @@
           </div>
         </div>
         <div class="inspection-plan-description mb-3">
-          <label class="fw-medium">Chi tiết</label>
+          <label class="fw-medium">Chi tiết<span class="p-error">*</span></label>
           <textarea
             type="text"
             pInputTextarea
@@ -48,7 +54,7 @@
         </div>
         <div class="inspection-plan-school mb-3 row">
           <div class="col-md-6">
-            <label class="fw-medium">Trường kiểm tra</label>
+            <label class="fw-medium">Trường kiểm tra<span class="p-error">*</span></label>
             <p-dropdown class="full-width-dropdown" [options]="schoolList" formControlName="schoolId"
                         optionLabel="schoolName"
                         [filter]="true" filterBy="schoolName" optionValue="schoolId" [showClear]="true"
@@ -56,8 +62,8 @@
             </p-dropdown>
           </div>
           <div class="col-md-6">
-            <label class="fw-medium">Trưởng đoàn kiểm tra</label>
-            <p-dropdown class="full-width-dropdown" [options]="selectedInspectorList" formControlName="chiefId"
+            <label class="fw-medium">Trưởng đoàn kiểm tra<span class="p-error">*</span></label>
+            <p-dropdown class="full-width-dropdown" [options]="eligibleChiefList" formControlName="chiefId"
                         optionLabel="user.fullName"
                         [filter]="true" filterBy="user.fullName" optionValue="accountId" [showClear]="true"
                         placeholder="Chọn trưởng đoàn kiểm tra">
@@ -66,12 +72,12 @@
         </div>
         <div class="row mb-3">
           <div class="col-md-3">
-            <label for="startDate" class="fw-medium">Ngày bắt đầu</label>
-            <input id="startDate" class="form-control" type="date" formControlName="startDate"/>
+            <label for="startDate" class="fw-medium">Ngày bắt đầu<span class="p-error">*</span></label>
+            <input id="startDate" class="form-control" type="date" formControlName="startDate" [min]="minStartDate" [max]="maxStartDate" (change)="onStartDateChange()"/>
           </div>
           <div class="col-md-3">
-            <label for="endDate" class="fw-medium">Ngày kết thúc</label>
-            <input id="endDate" class="form-control" type="date" formControlName="endDate"/>
+            <label for="endDate" class="fw-medium">Ngày kết thúc<span class="p-error">*</span></label>
+            <input id="endDate" class="form-control" type="date" formControlName="endDate" [min]="minEndDate" (change)="onEndDateChange()"/>
             <span id="endDateSelected"></span>
           </div>
         </div>
@@ -86,11 +92,11 @@
         ></app-inspection-plan-inspector-list>
       </div>
       <div class="document" formGroupName="documentInspectionPlanDto">
-        <h6>Tài liệu công văn</h6>
+        <h6 class="fw-bold">Tài liệu công văn</h6>
         <div class="row document-item mb-2">
           <div class="d-flex flex-row">
             <div class="col-md-4 pe-3">
-              <label>Tên tài liệu</label><br/>
+              <label class="fw-medium">Tên tài liệu<span class="p-error">*</span></label><br/>
               <input
                 pInputText
                 placeholder="Điền tên tài liệu"
@@ -107,7 +113,7 @@
               </div>
             </div>
             <div class="col-md-2 pe-3">
-              <label>Mã tài liệu</label><br/>
+              <label class="fw-medium">Mã tài liệu<span class="p-error">*</span></label><br/>
               <input
                 pInputText
                 placeholder="Điền mã tài liệu"
@@ -124,7 +130,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <label>Tài liệu</label><br/>
+              <label class="fw-medium">Tài liệu<span class="p-error">*</span></label><br/>
               <div class="input-file">
                 <input
                   type="file"
@@ -142,13 +148,19 @@
                   class="col-md-2"
                 ></button>
               </div>
+              <div class="mt-1"
+                   *ngIf="documentFileControls?.invalid && (documentFileControls?.touched || documentFileControls?.dirty)">
+                <span *ngIf="documentFileControls?.errors?.['required']" class="p-error">
+                  Vui lòng điền mã tài liệu
+                </span>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="mt-5 mb-3 row w-100">
         <div class="col-12 save-button d-flex w-100 justify-content-center">
-          <button class="btn text-white">Lưu quyết định</button>
+          <button [disabled]="inspectionPlanForm.invalid" class="btn text-white">Lưu quyết định</button>
         </div>
       </div>
     </form>
