--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
@@ -40,6 +40,7 @@
                 [showClear]="true"
                 placeholder="Chọn 1 trường"
                 (onChange)="loadDocuments()"
+                *ngIf="!isPrincipal"
     >
       <ng-template pTemplate="selectedItem">
         <div class="flex align-items-center gap-2" *ngIf="selectedSchool">
