add user profile html

--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -8,7 +8,9 @@
   <div class="col-md-6 d-flex flex-row justify-content-end align-items-center top-nav">
     <app-notification-list [notificationItems]="notificationListDtos"></app-notification-list>
     <a>
-      <i class="bi bi-person-circle"></i>
+      <i class="bi bi-person-circle" (click)="onClickUserProfile()"></i>
     </a>
   </div>
 </div>
+
+<app-user-profile [visible] = "isVisible"> </app-user-profile>
