fix when click x button on the modal to reset the update modal

--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -13,4 +13,5 @@
   </div>
 </div>
 
-<app-user-profile [visible] = "isVisible"> </app-user-profile>
+<app-user-profile [visible] = "isVisible"
+(visibleChange)="onClickUserProfile()"> </app-user-profile>
